<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/post_background"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.fifthgen.mustage.views.CircleImageView
            android:id="@+id/user_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_profile_picture"
            android:scaleType="fitEnd"
            android:src="@mipmap/profile_placeholder" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/user_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="username" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/user_profile"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:text="5s ago" />

    </android.support.constraint.ConstraintLayout>

    <com.fifthgen.mustage.views.FixedAspectRatioFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:aspectRatioHeight="1"
        app:aspectRatioWidth="1">

        <com.fifthgen.mustage.views.CenterCropVideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/cd_thumbnail"
            android:scaleType="centerCrop"
            android:src="@mipmap/placeholder" />

        <ImageView
            android:id="@+id/mute_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/cd_mute"
            android:src="@drawable/ic_mute_status" />

    </com.fifthgen.mustage.views.FixedAspectRatioFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/item_padding"
        android:paddingRight="@dimen/item_padding">

        <ImageButton
            android:id="@+id/btn_comment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/cd_comment"
            android:src="@drawable/ic_comments" />

        <ImageButton
            android:id="@+id/btn_like"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/cd_like"
            android:src="@drawable/ic_like" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/cd_share"
            android:src="@drawable/ic_share" />

        <ImageButton
            android:id="@+id/btnTag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/cd_tag"
            android:src="@drawable/ic_tag" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_report"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/cd_share"
            android:src="@drawable/ic_flag_black_24dp" />

    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/chipContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:flexWrap="wrap">

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/commentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text comment" />
</LinearLayout>