...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comment_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/item_padding"
            android:layout_marginRight="@dimen/item_padding"
            android:layout_weight="1"
            android:hint="@string/hint_add_comment"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
            android:textColor="?attr/colorButtonNormal"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/cd_comment"
            android:src="@drawable/ic_btn_send"
            android:tint="?attr/colorButtonNormal" />
...
