...
    <string name="facebook_application_id" translatable="false">463667583674080</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb463667583674080</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">b4WMRrLk1n04XDWLVgvtiaMnw</string>
    <string name="twitter_consumer_secret" translatable="false">mjqo8uqbQ074qZB303ZztSeDgrQhgwci6ETdGRabaq0WvxcfZe</string>
    <string name="button_send">Send</string>

    <!-- Main menu -->
    <string name="settings">Settings</string>
    <string name="binocular">Binocular</string>

    <string name="unknown">Unknown</string>
...
